@@ -1508,6 +1508,106 @@ instead (the same library as pdftopdf uses).
 License: GNU General Public License version 3 or any newer version
 
 
+BEH - Backend Error Handler wrapper backend
+===========================================
+
+A wrapper for CUPS backends to make error handling more configurable
+
+Usually, if a CUPS backend exits with an error status other than zero
+(for example if a printer is not turned on or not reachable on the
+network), CUPS disables the print queue and one can only print again
+if a system administrator re-enables the queue manually. Even
+restarting CUPS (or rebooting) does not re-enable disabled queues.
+
+For system administrators this can get annoying, for newbie users who
+are not aware of this problem it looks like that CUPS is severely
+broken. They remove and re-install print queues, getting on the nerves
+of distro install support, people, or even switch back to a
+proprietary operating system.
+
+Nowadays CUPS allows some configurability to avoid this, setting the
+Error Policy to "retry-job", but this does not allow to retry for
+infinitely many times and generally does not allow to change the
+number of repetitions. It is also not possible to simply drop the job
+without disabling the queue when CUPS gives up repeating the job.
+
+This script makes the handling of such backend errors more
+configurable, so that the problem can easily be worked around. The new
+possibilities are:
+
+ - Let queues simply not being disabled. Simple approach, but job gets
+   lost.
+
+ - Repeat a given number of times.
+
+ - Repeat infinitely often, until the job gets finally through. This
+   is the standard of LPRng, and it eliminates loss of the job.
+
+ - The interval between two attempts to run the backend can also be
+   configured.
+
+ - Configuration is done independently for each print queue. So local
+   printers and network printers can be treated differently.
+
+
+Usage: 
+
+Activate "beh" for your print queue(s) with command(s) like this:
+
+lpadmin -p <queue name> -E -v beh:/<dd>/<att>/<delay>/<originaluri>
+
+with 
+  <queue name>:     The name of your print queue
+  <dd>:             Don't Disable, if "1", beh always exits with zero
+                    status, so the queue gets never disabled when the
+                    original backend exits with an error. "0" carries
+                    the error status of the last call of the backend
+                    (after <att> retries) on to CUPS, so the queue
+                    usually gets disabled.
+  <att>:            Attempts, number of attempts to recall the backend
+                    in case of an error. "0" means infinite retries. In
+                    this case <dd> gets meaningless.
+  <delay>:          Delay between two attempts to call the beckend, to
+                    be given in seconds and as an integer number.
+                    Meaningless if <att> is one.
+  <originaluri>:    The original URI, which your queue had before. Can 
+                    be determined with "lpstat -v".
+
+All parameters, especially, <dd>, <att>, and <delay> have always to be
+specified, even if one of them is meaningless due to the setting of
+the others.
+
+beh works with every backend except the "hp" backend of HPLIP, as the
+"hp" backend repeats failed jobs by itself.
+
+Example URIs:
+
+beh:/1/3/5/socket://printer:9100
+
+  On the network printer with host name "printer" it is tried to
+  access 3 times with 5 second delays between the attempts. If the job
+  still fails, the queue is not disabled (and the job discarded).
+
+beh:/0/10/60/socket://printer:9100
+
+  Retry 10 times in one minute intervals, disable the queue when still
+  not succeeding.
+
+beh:/1/0/60/usb://Brother/HL-5040%20series
+
+  On a Brother HL-5040 on the USB try infinitely often until the
+  printer comes back, in intervals of one minute. This way the job
+  does not get lost when the printer is turned off and one can
+  intendedly delay printing by simply switching off the printer. The
+  ideal configuration for desktop printers and/or home users.
+
+Originally this backend was written in Perl and part of the
+foomatic-filters package. It was not overtaken into cups-filters
+together with foomatic-rip to avoid the introduction of a dependency
+on Perl. Now it has been re-written in C and so it can be part of
+cups-filters without introducing new dependencies.
+
+
 BRAILLE EMBOSSING
 =================
 
